style: update landing page design

--- a/apps/www/app/global.css
+++ b/apps/www/app/global.css
@@ -46,7 +46,7 @@
   /* Fumadocs UI Theme */
   --color-fd-primary: oklch(0.6082 0.217882 280.9843);
 
-  /* Shadcn UI Theme */
+  /* Shadcn UI Theme - Light */
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -85,7 +85,7 @@
   /* Fumadocs UI Theme */
   --color-fd-primary: oklch(0.6082 0.217882 280.9843);
 
-  /* Shadcn UI Theme */
+  /* Shadcn UI Theme - Dark */
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
