--- a/apps/www/app/global.css
+++ b/apps/www/app/global.css
@@ -88,7 +88,7 @@
   /* Shadcn UI Theme - Dark */
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
+  --card: oklch(10.668% 0.00001 271.152);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
