--- a/apps/www/app/global.css
+++ b/apps/www/app/global.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import 'fumadocs-ui/css/dusk.css';
+@import "fumadocs-ui/css/dusk.css";
 @import "fumadocs-ui/css/preset.css";
 
 @custom-variant dark (&:is(.dark *));
